Fixed overflow problem

--- a/src/Game.css
+++ b/src/Game.css
@@ -1,3 +1,7 @@
+body{
+  overflow-y: hidden;
+}
+
 body,
 .table td {
   background-color: rgb(246, 247, 245);
